--- a/src/stories/accordionselect/AccordionSelect.module.scss
+++ b/src/stories/accordionselect/AccordionSelect.module.scss
@@ -53,10 +53,22 @@
 }
 
 .dropdown {
-    overflow: hidden;
+    display: grid;
+    grid-template-rows: 0fr;
+    opacity: 0;
+    transition:
+        grid-template-rows 800ms cubic-bezier(0.87, 0, 0.13, 1),
+        opacity 800ms cubic-bezier(0.87, 0, 0.13, 1);
+
+    &.open {
+        grid-template-rows: 1fr;
+        opacity: 1;
+    }
 }
 
 .dropdownContent {
+    min-height: 0;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     padding: 0;
